@@ -12,4 +12,6 @@
      conditionalparents: nil using mixture("internal:UnityScore")
                          | seg(0) using mixture collection("collection_seg_$track")
                          mapping("map_parent");
+
+     weight: scale $weight_scale;
    }
